# L-Systems

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: how-to-guides.md  index.md
examples/: bracketed_ol_system_fig1_24a.py  bracketed_ol_system_fig1_24b.py  bracketed_ol_system_fig1_24c.py  bracketed_ol_system_fig1_24d.py  bracketed_ol_system_fig1_24f.py  dragon_curve.py  hexagonal_gosper_curve.py  islands_and_lakes.py  koch_curves_fig1_7b.py  koch_curves_fig1_9a.py  koch_curves_fig1_9b.py  koch_curves_fig1_9c.py  koch_curves_fig1_9d.py  koch_curves_fig1_9e.py  koch_curves_fig1_9f.py  koch_island.py  sierpinski_gask.py  sierpinski_gask_no_animation.py
src/examples/: bracketed_ol_system_fig1_24a.py  bracketed_ol_system_fig1_24b.py  bracketed_ol_system_fig1_24c.py  bracketed_ol_system_fig1_24d.py  bracketed_ol_system_fig1_24f.py  dragon_curve.py  hexagonal_gosper_curve.py  islands_and_lakes.py  koch_curves_fig1_7b.py  koch_curves_fig1_9a.py  koch_curves_fig1_9b.py  koch_curves_fig1_9c.py  koch_curves_fig1_9d.py  koch_curves_fig1_9e.py  koch_curves_fig1_9f.py  koch_island.py  sierpinski_gask.py
src/l_system/: __main__.py  base.py
src/l_system/rendering/: renderer.py  turtle.py
tests/: constants.py  test_lsystem.py
